adding in Google AdMob mediation adapter classes added more callback methods

--- a/src/example/res/values/strings.xml
+++ b/src/example/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, TapItTestActivity!</string>
+    <string name="tapitButtons">TapIt Buttons</string>
+    <string name="googleButtons">Google Buttons</string>
     <string name="app_name">TapItTest</string>
 
 </resources>
